new page add and addto cart done

--- a/Views/Home/NewPurchaseReq.cshtml
+++ b/Views/Home/NewPurchaseReq.cshtml
@@ -1,4 +1,83 @@
 ﻿<section id="content-wrapper">
-  <h1>NewPurchaseReq page</h1>
-</section>
+            <div class="header-inner-title">
+                <div class="page-title">
+                    <h1>New Purchase Request</h1>
+                </div>
+                <div>
+                    <button class="common-button common-blue-button">Request</button>
+                </div>
+            </div>
+            <div class="container-fluid">
+                <div>
+                    <div class="row">
+                        <div class="col-md-4 col-sm-6">
+                            <div class="form-group">
+                                <label for="usr">Material Name<span>*</span></label>
+                                <input type="text" class="form-control" id="usr">
+                            </div>
+                        </div>
+                        <div class="col-md-4 col-sm-6">
+                            <div class="form-group">
+                                <label for="usr">Material group<span>*</span></label>
+                                <select class="form-control" id="sel1" name="Acct Assignment Cart">
+                                    <option>1</option>
+                                    <option>2</option>
+                                    <option>3</option>
+                                    <option>4</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="col-md-4 col-sm-6">
+                            <div class="form-group">
+                                <label for="usr">Unit Of Measure <span>*</span></label>
+                                <select class="form-control" id="sel1" name="sellist1">
+                                    <option>1</option>
+                                    <option>2</option>
+                                    <option>3</option>
+                                    <option>4</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="col-md-4 col-sm-6">
+                            <div class="form-group">
+                                <label for="usr">Select Location</label>
+                                <select class="form-control" id="sel1" name="sellist1">
+                                    <option>1</option>
+                                    <option>2</option>
+                                    <option>3</option>
+                                    <option>4</option>
+                                </select>
+                            </div>
+                        </div>
 
+                        <div class="col-md-4 col-sm-6">
+                            <div class="form-group">
+                                <label for="comment">Material Description</label>
+                                <textarea class="form-control" rows="1" id="comment"></textarea>
+                            </div>
+                        </div>
+                        <div class="col-md-4 col-sm-6">
+                            <div class="form-group">
+                                <label for="usr">Moving price<span>*</span></label>
+                                <input type="text" class="form-control" id="usr">
+                            </div>
+                        </div>
+                        <div class="col-md-4 col-sm-6">
+                            <div class="form-group">
+                                <div class="switch-btn-wrap">
+                                    <label class="switch">
+                                        <input type="checkbox">
+                                        <span class="slider round"></span>
+                                    </label>
+                                    <span class="switch-text">Batch Management</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="vendors-buttons-wrap">
+                        <button class="common-button common-orange-button">RESET</button>
+                        <button class="common-button common-blue-button">SAVE</button>
+                    </div>
+                </div>
+            </div>
+        </section>
