--- a/Views/Home/Notifications.cshtml
+++ b/Views/Home/Notifications.cshtml
@@ -1,5 +1,28 @@
-﻿<section id="content-wrapper">
-  <h1>Notifications</h1>
-</section>
+﻿ <section id="content-wrapper">
+            <div class="page-title">
+                <h1>Notifications</h1>
+            </div>
+            <div class="container-fluid">
+                <div>
+                    <div class="row" id="Notificationsfullbody">
+                        @* <div class="col-md-6">
+                            <div class="notification-wrap">
+                                <div class="notification-inner">
+                                    <div class="user-img"><img src="https://172.16.1.69/img/profile.28fb3626.jpg"></div>
+                                    <div class="user-info">
+                                        <h3>${element.message}</h3>
+                                        <p>(${element.product_id + "-" + element.name})</p>
+                                        <p>${element.created_at}</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div> *@
+                    </div>
+                </div>
+            </div>
 
+        </section>
 
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="~/js/main.js"></script>
+<script src="~/js/Notifications/Notifications.js"></script>
