--- a/Views/Home/Servicerequest.cshtml
+++ b/Views/Home/Servicerequest.cshtml
@@ -1,3 +1,156 @@
-﻿<section id="content-wrapper">
-  <h1>Servicerequest</h1>
-</section>
+﻿ <section id="content-wrapper">
+            <div class="page-title">
+                <h1>Service Request</h1>
+            </div>
+            <div class="container-fluid">
+                <div>
+                    <div class="row">
+                        <div class="col-md-4 col-sm-6">
+                            <div class="form-group">
+                                <label for="usr">PR Type Service<span>*</span></label>
+                                <input type="text" class="form-control" id="usr">
+                            </div>
+
+                        </div>
+                        <div class="col-md-4 col-sm-6">
+                            <div class="form-group">
+                                <label for="usr">Item category D-Service<span>*</span></label>
+                                <input type="text" class="form-control" id="usr">
+                            </div>
+                        </div>
+                        <div class="col-md-4 col-sm-6">
+                            <div class="form-group">
+                                <label for="usr">Acct Assignment Cart<span>*</span></label>
+                                <select class="form-control" id="sel1" name="Acct Assignment Cart">
+                                    <option>1</option>
+                                    <option>2</option>
+                                    <option>3</option>
+                                    <option>4</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="col-md-4 col-sm-6">
+                            <div class="form-group">
+                                <label for="usr">Search Plant <span>*</span></label>
+                                <select class="form-control" id="sel1" name="sellist1">
+                                    <option>1</option>
+                                    <option>2</option>
+                                    <option>3</option>
+                                    <option>4</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="col-md-4 col-sm-6">
+                            <div class="form-group">
+                                <label for="usr">Service Group</label>
+                                <select class="form-control" id="sel1" name="sellist1">
+                                    <option>1</option>
+                                    <option>2</option>
+                                    <option>3</option>
+                                    <option>4</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="col-md-4 col-sm-6">
+                            <div class="form-group">
+                                <label for="usr">Service No</label>
+                                <select class="form-control" id="sel1" name="sellist1">
+                                    <option>1</option>
+                                    <option>2</option>
+                                    <option>3</option>
+                                    <option>4</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="col-md-4 col-sm-6">
+                            <div class="form-group">
+                                <label for="usr">Quantity<span>*</span></label>
+                                <input type="text" class="form-control" id="usr">
+                            </div>
+                        </div>
+                        <div class="col-md-4 col-sm-6">
+                            <div class="form-group">
+                                <label for="usr">UOM</label>
+                                <select class="form-control" id="sel1" name="sellist1">
+                                    <option>1</option>
+                                    <option>2</option>
+                                    <option>3</option>
+                                    <option>4</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="col-md-4 col-sm-6">
+                            <div class="form-group">
+                                <label for="usr">Gross Price</label>
+                                <input type="text" class="form-control" id="usr">
+                            </div>
+                        </div>
+                        <div class="col-md-4 col-sm-6">
+                            <div class="form-group">
+                                <label for="usr">G/L Account</label>
+                                <select class="form-control" id="sel1" name="sellist1">
+                                    <option>1</option>
+                                    <option>2</option>
+                                    <option>3</option>
+                                    <option>4</option>
+                                </select>
+                            </div>
+                        </div>
+
+                        <div class="col-md-4 col-sm-6">
+                            <div class="form-group">
+                                <label for="usr">Cost Center<span>*</span></label>
+                                <select class="form-control" id="sel1" name="sellist1">
+                                    <option>1</option>
+                                    <option>2</option>
+                                    <option>3</option>
+                                    <option>4</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="col-md-4 col-sm-6">
+                            <div class="form-group">
+                                <label for="usr">Purchase Group</label>
+                                <select class="form-control" id="sel1" name="sellist1">
+                                    <option>1</option>
+                                    <option>2</option>
+                                    <option>3</option>
+                                    <option>4</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="col-md-4 col-sm-6">
+                            <div class="form-group">
+                                <label for="usr">Purchase Organization<span>*</span></label>
+                                <input type="text" class="form-control" id="usr">
+                            </div>
+                        </div>
+                        <div class="col-md-4 col-sm-6">
+                            <div class="form-group">
+                                <label for="comment">Short Text<span>*</span></label>
+                                <textarea class="form-control" rows="1" id="comment"></textarea>
+                            </div>
+                        </div>
+                        <div class="col-md-4 col-sm-6">
+                            <div class="form-group">
+                                <label for="comment">Reason<span>*</span></label>
+                                <textarea class="form-control" rows="1" id="comment"></textarea>
+                            </div>
+                        </div>
+                        <div class="col-md-4 col-sm-6">
+                            <div class="form-group">
+                                <label class="filelabel">
+                                    <span class="material-symbols-rounded">attach_file</span>
+                                    <span class="title">Add File</span>
+                                    <input class="FileUpload1" id="FileInput" name="booking_attachment" type="file" />
+                                </label>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="vendors-buttons-wrap">
+                        <button class="common-button common-orange-button">RESET</button>
+                        <button class="common-button common-blue-button">SAVE</button>
+                    </div>
+                </div>
+            </div>
+        </section>
