--- a/Views/Home/MyRequests.cshtml
+++ b/Views/Home/MyRequests.cshtml
@@ -1,10 +1,4 @@
 ﻿
-@* <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
-<link href='https://fonts.googleapis.com/css?family=Lato:300,400|Montserrat:700' rel='stylesheet' type='text/css'>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<script src="https://cdn.jsdelivr.net/npm/jquery@3.6.4/dist/jquery.slim.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script> *@
 <link rel="stylesheet" type="text/css" href="~/css/MyRequests.css">
 
 <section id="content-wrapper">
@@ -77,25 +71,23 @@
                                                 <form>
                                                     <div class="search-container-inner">
                                                         <input type="text" placeholder="Search.." name="search">
-                                                        <button type="submit"><i class="fa fa-search"></i></button>
+                                                        <button type="submit"><span class="material-symbols-rounded">search</span></button>
                                                     </div>
                                                 </form>
                                             </div>
 
                                             <div class="indent-tab-item">
                                                 <button class="common-button common-blue-button">
-                                                    <span><i class="fa fa-print" aria-hidden="true"></i></span>
+                                                    <span class="material-symbols-rounded">print</span>
                                                     PRINT
                                                 </button>
                                             </div>
                                             <div class="indent-tab-item">
-                                                <button class="common-button-icon"><span><i class="fa fa-filter"
-                                                            aria-hidden="true"></i></span>
+                                                <button class="common-button-icon"><span class="material-symbols-rounded">filter_list</span>
                                                 </button>
                                             </div>
                                             <div class="indent-tab-item">
-                                                <button class="common-button common-blue-button"><span><i
-                                                            class="fa fa-plus" aria-hidden="true"></i></span> NEW
+                                                <button class="common-button common-blue-button"><span class="material-symbols-rounded">add</span> NEW
                                                     INDENT</button>
                                             </div>
                                         </div>
@@ -301,15 +293,11 @@
                                                                                     <th>
                                                                                         <div>
                                                                                             <p><span data-toggle="modal"
-                                                                                                    data-target="#indent-timeline-modal"><i
-                                                                                                        class="fa fa-eye"
-                                                                                                        aria-hidden="true"></i></span>
+                                                                                                    data-target="#indent-timeline-modal"><span class="material-symbols-rounded">visibility</span></span>
                                                                                                 TIMELINE
                                                                                             </p>
                                                                                             <p><span data-toggle="modal"
-                                                                                                    data-target="#indentApproval"><i
-                                                                                                        class="fa fa-eye"
-                                                                                                        aria-hidden="true"></i></span>
+                                                                                                    data-target="#indentApproval"><span class="material-symbols-rounded">visibility</span></span>
                                                                                                 Approval
                                                                                                 Flow</p>
                                                                                         </div>
@@ -392,7 +380,7 @@
                                                             </div>
                                                         </div>
                                                     </div>
-                                                    <div class="card">
+                                                    @* <div class="card">
                                                         <div class="card-header" id="faqhead2">
                                                             <a href="#" class="btn btn-header-link collapsed"
                                                                 data-toggle="collapse" data-target="#faq2"
@@ -963,7 +951,7 @@
                                                                 </div>
                                                             </div>
                                                         </div>
-                                                    </div>
+                                                    </div> *@
                                                 </div>
                                             </div>
                                         </div>
