--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -15,7 +15,7 @@
 
     @* <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
     integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"> *@
-    
+
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
     <link href='https://fonts.googleapis.com/css?family=Lato:300,400|Montserrat:700' rel='stylesheet' type='text/css'>
@@ -27,7 +27,7 @@
 
     <!--Google icon cdn -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-@* <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@40,400,1,0" /> *@
+    @* <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@40,400,1,0" /> *@
     <!--Local css-->
 
     @* toastr  css*@
@@ -53,11 +53,11 @@
                     <span><b>GRIM</b></span>
                 </a>
             </div>
-          
+
                 <ul class="sidebar-nav" id="sidebar-nav">                   
-                    @* display all side menu name *@
+                @* display all side menu name *@
                 </ul> 
-         
+
             </aside>
         <!-- sidebar end -->
 
@@ -132,7 +132,7 @@
                 </div>
 
                 <div class="modal-body" id="noticationbody">
-                   
+
                 </div>
 
             </div><!-- modal-content -->
@@ -140,37 +140,73 @@
     </div><!-- modal -->
 
 <!-- Button trigger modal -->
-@* <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter">
+    @* <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter">
   Launch demo modal
 </button> *@
 
-<!-- Modal center model yes and no -->
-<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        ...
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
-      </div>
+
+<!---------------------------- Order placed Modal start---------------------------->
+<div class="modal fade" id="orderPlacedModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle"
+    aria-hidden="true" data-bs-keyboard="false" data-bs-backdrop="static">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLongTitle">
+                    Order Placed    
+                </h5>
+                <button type="button" class="close" data-dismiss="modal" onclick="popClose('orderPlacedModal')" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <h3 id="usernameprint">Hey Indent User</h3>
+                <p id="orderid">Your ordetr id:56 is placed and will be delivered from NC09 Centerl Gen Stor</p>
+            </div>
+            <div class="modal-footer">
+                <a href="/NewIndent"><button type="button" asp-controller="Home" asp-action="NewIndent" class="common-button common-blue-button" data-dismiss="modal">Your Next
+                    Order</button></a>
+                <a href="/MyRequests"><button type="button" asp-controller="Home" asp-action="MyRequests" class="common-button common-green-button">Track Your Order</button></a>
+            </div>
+        </div>
     </div>
-  </div>
 </div>
-<!-- Modal center model yes and no -->
+
+<!---------------------------- Order placed Modal end---------------------------->
+
+
+<!-- custom Modal center model yes and no  -->
+<div class="modal fade" id="customModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle"
+    aria-hidden="true" data-bs-keyboard="false" data-bs-backdrop="static">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header bg-yellow">
+                <h5 class="modal-title" id="exampleModalLongTitle">
+                    <span class="material-symbols-rounded">warning</span>
+                    Replace Cart Material
+                </h5>
+                <button type="button" class="close" data-dismiss="modal" onclick="popClose('customModalCenter')" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <p>Your Cart contains materials Do you want to
+                    discard the selection and add materials from
+                    Central Gen Stor?</p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="common-button common-red-button" data-dismiss="modal" onclick="popClose('customModalCenter')">No</button>
+                <button type="button" class="common-button common-blue-button" onclick="handleYes()">Yes</button>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- custom Modal center model yes and no  -->
 
     <script src="~/assets/toastr/toastr.min.js"></script>
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    
+
     <script src="~/js/main.js"></script>
     <script src="~/js/Home/Home.js"></script>
 
@@ -182,7 +218,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 
     <script type="text/javascript">
-      
+
         // Check if the screen size matches a mobile device
         var isMobile = window.matchMedia("(max-width: 767px)").matches;
 
@@ -208,7 +244,7 @@
         var menu=[] ;
         var icon;
         var menuOptions = roles_menus[Logindata.user[0].role_id][0];
-        
+
         $.each(menuOptions, function(key, value) {
             $.each(icons_list, function(ikey, ivalue) {
                 if(ikey==key){icon=ivalue } 
