--- a/wwwroot/css/common.css
+++ b/wwwroot/css/common.css
@@ -72,6 +72,23 @@ a:focus {
   background-color: #fff;
 }
 
+.common-red-button {
+  background-color: #ff0000;
+  border: 1px solid #ff0000;
+}
+.common-red-button:hover {
+  color: #ff0000;
+  background-color: #fff;
+}
+.common-green-button {
+  background-color: #4caf50;
+  border: 1px solid #4caf50;
+}
+.common-green-button:hover {
+  color: #4caf50;
+  background-color: #fff;
+}
+
 .common-button-icon {
   padding: 5px 15px;
   border-radius: 4px;
@@ -82,6 +99,19 @@ a:focus {
   background-color: transparent;
   border: unset;
   font-size: 20px;
+}
+
+.bg-yellow {
+  background-color: #ff9800;
+}
+.bg-blue {
+  background-color: #1976d2;
+}
+.bg-red {
+  background-color: #ff0000;
+}
+.bg-orange {
+  background-color: #f95424;
 }
 
 /* --------------------------------COMMON CSS END--------------------------------------- */
@@ -422,6 +452,100 @@ img {
 }
 /* --------------------------------COMMON CSS sidebar and header END--------------------------------------- */
 
+/* -----------------------------table common start --------------------- */
+.table-scroll.table-scroll-wrap {
+  position: relative;
+  width: 100%;
+  z-index: 1;
+  margin: auto;
+  overflow: auto;
+  /* height: 350px; */
+  min-height: 140px;
+}
+.table-scroll.table-scroll-wrap table {
+  width: 100%;
+  min-width: 1280px;
+  margin: auto;
+  border-collapse: separate;
+  border-spacing: 0;
+}
+.table-wrap {
+  position: relative;
+}
+.table-scroll.table-scroll-wrap th,
+.table-scroll.table-scroll-wrap td {
+  padding: 5px 10px;
+  /* border: 1px solid #000; */
+  background: #fff;
+  vertical-align: middle;
+  font-size: 14px;
+  font-weight: 500;
+  white-space: nowrap;
+}
+.table-scroll.table-scroll-wrap thead tr th {
+  background-color: rgba(25, 118, 210, 0.2);
+  padding: 10px;
+}
+.table-scroll.table-scroll-wrap tr:nth-child(even) td {
+  background-color: rgba(0, 0, 0, 0.05);
+}
+.table-scroll.table-scroll-wrap td .form-check {
+  margin: -8px 0px 0 6px;
+}
+
+.table-scroll.table-scroll-wrap thead th {
+  background: #fff;
+  color: #666;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+}
+/* safari and ios need the tfoot itself to be position:sticky also */
+.table-scroll.table-scroll-wrap tfoot,
+.table-scroll.table-scroll-wrap tfoot th,
+.table-scroll.table-scroll-wrap tfoot td {
+  position: -webkit-sticky;
+  position: sticky;
+  bottom: 0;
+  background: #666;
+  color: #666;
+  z-index: 4;
+}
+
+.table-scroll.table-scroll-wrap th:last-child {
+  position: -webkit-sticky;
+  position: sticky;
+  left: auto;
+  right: 0;
+  z-index: 2;
+  background: #efe9e9;
+}
+.table-scroll.table-scroll-wrap thead th:last-child,
+.table-scroll.table-scroll-wrap tfoot th:last-child {
+  background: #efe9e9;
+  z-index: 5;
+}
+.table-scroll.table-scroll-wrap th,
+.table-scroll.table-scroll-wrap td .material-symbols-rounded {
+  color: #1976d2;
+}
+.table-scroll.table-scroll-wrap th:last-child div p {
+  cursor: pointer;
+  margin-bottom: 6px;
+}
+.table-scroll.table-scroll-wrap th:last-child div p i {
+  color: #1976d2;
+}
+.table-search {
+  display: flex;
+  justify-content: end;
+  margin-bottom: 10px;
+}
+.table-search .search-container {
+  width: 40%;
+}
+/* -----------------------------table common end --------------------- */
+
 /*------------------------------------------- pagination css start -------------------------------------------*/
 .pagination-wrap .pagination .page-item .page-link {
   color: #1976d2;
@@ -596,7 +720,7 @@ nav.pagination-wrap {
 .table-scroll.table-scroll-wrap th,
 .table-scroll.table-scroll-wrap td {
   padding: 5px 10px;
-  border: 1px solid #000;
+  /* border: 1px solid #000; */
   background: #fff;
   vertical-align: middle;
   font-size: 14px;
@@ -1014,3 +1138,180 @@ nav.pagination-wrap {
   font-size: 12px;
 }
 /* -------------notification css end-------------- */
+
+/* ----------------  Order placed Modal start---------------- */
+#orderPlacedModal .modal-body h3 {
+  font-size: 24px;
+}
+@media (max-width: 767px) {
+  #orderPlacedModal .modal-body h3 {
+    font-size: 18px;
+  }
+  #orderPlacedModal .modal-footer {
+    justify-content: center;
+  }
+  #orderPlacedModal .modal-footer button {
+    margin: 0 10px 10px;
+  }
+}
+
+/* ----------------  Order placed Modal end---------------- */
+
+/* ---------------------vendor css start------------------- */
+.vendors-wrap h3 {
+  font-size: 1.3rem;
+  color: #1976d2;
+  border-bottom: 1px solid #1976d2;
+}
+.vendors-wrap .main-table {
+  padding: 30px 0;
+}
+.vendors-buttons-wrap {
+  display: flex;
+  justify-content: flex-end;
+}
+.cust-badge {
+  color: #fff;
+  padding: 5px;
+  border-radius: 12px;
+  padding: 2px 8px 4px;
+}
+.pendiing-badge {
+  background-color: #ff9800;
+}
+/* ---------------------vendor css end------------------- */
+/* ---------------------service css start------------------- */
+.filelabel {
+  border: 2px dashed grey;
+  border-radius: 5px;
+  display: block;
+  padding: 5px;
+  transition: border 300ms ease;
+  cursor: pointer;
+  text-align: center;
+  margin: 0;
+}
+.filelabel .material-symbols-rounded {
+  display: block;
+  font-size: 30px;
+  padding-bottom: 5px;
+}
+.filelabel .material-symbols-rounded,
+.filelabel .title {
+  color: grey;
+  transition: 200ms color;
+}
+.filelabel:hover {
+  border: 2px solid #1665c4;
+}
+.filelabel:hover .material-symbols-rounded,
+.filelabel:hover .title {
+  color: #1665c4;
+}
+#FileInput {
+  display: none;
+}
+/* ---------------------service css end------------------- */
+
+/* ---------------------purchase request css end------------------- */
+
+/* The switch - the box around the slider */
+.switch-btn-wrap {
+  display: flex;
+}
+.switch-btn-wrap .switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 25px;
+}
+
+/* Hide default HTML checkbox */
+.switch-btn-wrap .switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+/* The slider */
+.switch-btn-wrap .slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+
+.switch-btn-wrap .slider:before {
+  position: absolute;
+  content: "";
+  height: 20px;
+  width: 20px;
+  left: 4px;
+  bottom: 2.7px;
+  background-color: white;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+
+.switch-btn-wrap input:checked + .slider {
+  background-color: #2196f3;
+}
+
+.switch-btn-wrap input:focus + .slider {
+  box-shadow: 0 0 1px #2196f3;
+}
+
+.switch-btn-wrap input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+
+/* Rounded sliders */
+.switch-btn-wrap .slider.round {
+  border-radius: 34px;
+}
+
+.switch-btn-wrap .slider.round:before {
+  border-radius: 50%;
+}
+.switch-btn-wrap .switch-text {
+  padding: 0 10px;
+}
+.header-inner-title {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+/* ---------------- model yes and no common start---------------- */
+.bg-yellow {
+  background-color: #ff9800;
+}
+.bg-blue {
+  background-color: #1976d2;
+}
+.bg-red {
+  background-color: #ff0000;
+}
+.bg-orange {
+  background-color: #f95424;
+}
+
+#customModalCenter .modal-header .modal-title {
+  color: #fff;
+  display: flex;
+  align-items: center;
+}
+#customModalCenter .modal-header .modal-title span {
+  padding-right: 10px;
+}
+#customModalCenter .close {
+  color: #fff;
+  opacity: 1;
+}
+/* ---------------- model yes and no common end---------------- */
