timeline and Approval pop

--- a/Views/Home/Cart.cshtml
+++ b/Views/Home/Cart.cshtml
@@ -203,6 +203,8 @@
             $("#example").DataTable({
                 dom: "Bfrtip",
                 buttons: ["print"],
+                paging: false,
+                info: false,
             });
 
 
