--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -72,12 +72,12 @@
                 </div>
                 <div class="header-inner-icon">
                     <div class="position">
-                        <div class="badge red" id="notifications_no"></div>
+                        <div class="notif-badge red" id="notifications_no"></div>
                         <span  data-toggle="modal" data-target="#myModal2" class="material-symbols-rounded">notifications</span>
                     </div>
                     <a href="Cart">
                         <div class="position">
-                            <div class="badge green" id="notifications_cart"></div>
+                            <div class="notif-badge green" id="notifications_cart"></div>
                             <a href="Cart"><span class="material-symbols-rounded">shopping_cart</span></a>
                         </div>
                     </a>
