--- a/wwwroot/css/Home/NewIndent.css
+++ b/wwwroot/css/Home/NewIndent.css
@@ -4,7 +4,7 @@
   background-color: #f5f6fa;
   border-radius: 10px;
   color: #2f3640;
-  margin: 1.3em 0;
+  margin: 1.3em 10px;
   transition: all linear 0.2s;
 }
 /* .product-card :hover {
