added search functionlity on MyRequests page

--- a/Views/Home/Cart.cshtml
+++ b/Views/Home/Cart.cshtml
@@ -169,7 +169,7 @@
 
                     </table>
 
-                </div>
+                </div><br>
                 <div class="cart-buttons-wrap">
 
                     <button class="common-button common-blue-button" onclick="window.print();return false;"><span class="material-symbols-rounded">print</span> PREVIEW INDENT</button>
@@ -186,6 +186,16 @@
             </div>
 </section>
 <br><br>
+
+
+<div class="spinnerbody" id="spinnerbody">
+    <div class="spinnerchild">
+        <div class="spinner-border text-success " role="status">
+            <span class="sr-only"></span>
+        </div>
+        <span>Loading....</span>
+    </div>
+</div>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
 @* <script src="https://code.jquery.com/jquery-3.5.1.js"></script> *@
     <script src="//cdn.datatables.net/1.13.4/js/jquery.dataTables.min.js"></script>
