--- a/Views/Home/MyRequests.cshtml
+++ b/Views/Home/MyRequests.cshtml
@@ -36,7 +36,7 @@
                                     <div class="tabbable">
                                         <ul class="nav nav-pills nav-justified" id="eleve-nav" role="tablist">
                                             <li class="nav-item">
-                                                <a class="nav-link active" id="eleve-eco-tab" data-toggle="tab"
+                                                <a class="nav-link active" onclick="orders('Pending')" id="eleve-eco-tab" data-toggle="tab"
                                                     href="#eleve-eco" role="tab" aria-controls="first"
                                                     aria-selected="true">
                                                         <div class="position">
@@ -45,7 +45,7 @@
                                                 </a>
                                             </li>
                                             <li class="nav-item">
-                                                <a class="nav-link" id="eleve-standard-tab" data-toggle="tab"
+                                                <a class="nav-link" onclick="orders('Open')" id="eleve-standard-tab" data-toggle="tab"
                                                     href="#eleve-standard" role="tab" aria-controls="second"
                                                     aria-selected="false">
                                                         <div class="position">
@@ -54,7 +54,7 @@
                                                 </a>
                                             </li>
                                             <li class="nav-item">
-                                                <a class="nav-link" id="eleve-standard-tab1" data-toggle="tab"
+                                                <a class="nav-link" onclick="orders('Closed')" id="eleve-standard-tab1" data-toggle="tab"
                                                     href="#eleve-standard1" role="tab" aria-controls="second1"
                                                     aria-selected="false">
                                                         <div class="position">
@@ -63,7 +63,7 @@
                                                 </a>
                                             </li>
                                             <li class="nav-item">
-                                                <a class="nav-link" id="eleve-standard-tab2" data-toggle="tab"
+                                                <a class="nav-link" onclick="orders('All')" id="eleve-standard-tab2" data-toggle="tab"
                                                     href="#eleve-standard2" role="tab" aria-controls="second2"
                                                     aria-selected="false">
                                                     <div class="position">
@@ -86,7 +86,7 @@
                                             <div class="indent-tab-item search-container">
                                                 <form>
                                                     <div class="search-container-inner">
-                                                        <input type="text" placeholder="Search.." name="search">
+                                                        <input type="number" placeholder="Search by Indent Number Or Material Number" name="search" id="searchIndentNumber">
                                                         <button type="submit"><span class="material-symbols-rounded">search</span></button>
                                                     </div>
                                                 </form>
@@ -131,7 +131,7 @@
                                         </div>
 
                                     </div>
-                                    <div class="tab-pane fade" id="eleve-standard" role="tabpanel"
+                                    @* <div class="tab-pane fade" id="eleve-standard" role="tabpanel"
                                         aria-labelledby="eleve-standard-tab">
 
                                         <!-- ****************************************************** -->
@@ -166,7 +166,7 @@
                                         <!-- ****************************************************** -->
                                         <!-- END SECTION 4 -->
 
-                                    </div>
+                                    </div> *@
                                 </div>
 
                             </div>
@@ -250,16 +250,16 @@
 
                 <!-- Modal Header -->
                 <div class="modal-header">
-                    <h4 class="modal-title">Indent Timeline</h4>
+                    <h4 class="modal-title">Indent Approval Flow</h4>
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
                 </div>
 
                 <!-- Modal body -->
                 <div class="modal-body">
-                    <div class="timeline">
-                        <div class="timeline-container warning">
+                    <div class="timeline" id="timelinebody">
+                        @* <div class="timeline-container warning">
                             <div class="timeline-icon">
-                                <i class="far fa-grin-wink"></i>
+                                <i class="far fa-grin-wink">1</i>
                             </div>
                             <div class="timeline-body">
 
@@ -269,8 +269,8 @@
                                 </p>
                                 <p class="timeline-subtitle">1 Hours Ago</p>
                             </div>
-                        </div>
-                        <div class="timeline-container primary">
+                        </div> *@
+                        @* <div class="timeline-container primary">
                             <div class="timeline-icon">
                                 <i class="far fa-grin-hearts"></i>
                             </div>
@@ -334,19 +334,49 @@
                                 </p>
                                 <p class="timeline-subtitle">4 Days Ago</p>
                             </div>
-                        </div>
+                        </div> *@
                     </div>
                 </div>
-
-                <!-- Modal footer -->
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                </div>
-
             </div>
         </div>
     </div>
 
+<!-- custom Modal center model yes and no  -->
+<div class="modal fade" id="customModalCentermy" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle"
+    aria-hidden="true" data-bs-keyboard="false" data-bs-backdrop="static">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-headermy">
+                <h5 class="modal-titlemy" id="exampleModalLongTitle">
+                    <span class="material-symbols-rounded">warning</span>
+                    Replace Cart Material
+                </h5>
+                <button type="button" class="close" data-dismiss="modal" onclick="popClose('customModalCenter')" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-bodymy">
+                <p>Your Cart contains materials Do you want to
+                    discard the selection and add materials from
+                    Central Gen Stor?</p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="common-button common-red-button" data-dismiss="modal" onclick="popClose('customModalCenter')">No</button>
+                <button type="button" class="common-button common-blue-buttonmy">Yes</button>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- custom Modal center model yes and no  -->
+
+<div class="spinnerbody" id="spinnerbody">
+    <div class="spinnerchild">
+        <div class="spinner-border text-success " role="status">
+            <span class="sr-only"></span>
+        </div>
+        <span>Loading....</span>
+    </div>
+</div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 @* table script *@
