--- a/Views/Home/Vendors.cshtml
+++ b/Views/Home/Vendors.cshtml
@@ -10,32 +10,41 @@
 
                             <div class="vendors-wrap">
                                 <h3>Add New Vendor</h3>
-                                <div>
-                                    <div class="form-group">
-                                        <label for="usr">Vendor Name<span>*</span></label>
-                                        <input type="text" class="form-control" id="usr">
+                                <form method="post"
+                                    name="My_Form"
+                                    onsubmit="javascript:return checkvendor()">
+                                    <div>
+                                        <div class="form-group">
+                                            <label for="usr">Vendor Name<span>*</span></label>
+                                            <input type="text" name="name" class="form-control" id="usr">
+                                            <span class="error-msg1"></span>
+                                        </div>
+                                        <div class="form-group">
+                                            <label for="usr">Contact Name<span>*</span></label>
+                                            <input type="text" name="contactname" class="form-control" id="usr">
+                                            <span class="error-msg1"></span>
+                                        </div>
+                                        <div class="form-group">
+                                            <label for="number">Mobile Number<span>*</span></label>
+                                            <input type="tel" name="phone" id="phone" name="phone" class="form-control">
+                                            <span class="error-msg1"></span>
+                                        </div>
+                                        <div class="form-group">
+                                            <label for="comment">Address<span>*</span></label>
+                                            <textarea class="form-control" name="address" rows="3" id="comment"></textarea>
+                                            <span class="error-msg1"></span>
+                                        </div>
+                                        <div class="form-group">
+                                            <label for="comment">Remark</label>
+                                            <textarea class="form-control" name="remark" rows="3" id="comment"></textarea>
+                                            <span class="error-msg1"></span>
+                                        </div>
                                     </div>
-                                    <div class="form-group">
-                                        <label for="usr">Contact Name<span>*</span></label>
-                                        <input type="text" class="form-control" id="usr">
+                                    <div class="vendors-buttons-wrap">
+                                        <button type="rest" class="common-button common-orange-button">RESET</button>
+                                        <button type="submit" class="common-button common-blue-button">SAVE</button>
                                     </div>
-                                    <div class="form-group">
-                                        <label for="number">Mobile Number<span>*</span></label>
-                                        <input type="tel" id="phone" name="phone" class="form-control">
-                                    </div>
-                                    <div class="form-group">
-                                        <label for="comment">Address<span>*</span></label>
-                                        <textarea class="form-control" rows="3" id="comment"></textarea>
-                                    </div>
-                                    <div class="form-group">
-                                        <label for="comment">Remark</label>
-                                        <textarea class="form-control" rows="3" id="comment"></textarea>
-                                    </div>
-                                </div>
-                                <div class="vendors-buttons-wrap">
-                                    <button class="common-button common-orange-button">RESET</button>
-                                    <button class="common-button common-blue-button">SAVE</button>
-                                </div>
+                                </form>
                             </div>
                         </div>
                         <div class="col-lg-9 col-md-12 col-sm-12">
@@ -151,3 +160,4 @@
                 </div>
             </div>
         </section>
+<script src="~/js/vendors/vendors.js"></script>
