--- a/wwwroot/css/badge_notifiction.css
+++ b/wwwroot/css/badge_notifiction.css
@@ -53,7 +53,7 @@
   position: absolute;
   top: -2px;
   left: -2px;
-  border: 2px solid rgba(255, 0, 0, 0.5);
+  border: 2px solid rgba(255, 255, 255, 0.5);
   opacity: 0;
   border-radius: 50%;
   width: 100%;
@@ -137,4 +137,8 @@
   bottom: 18px;
   border-radius: 50%;
   padding: 4%;
+}
+
+.badge-success {
+  background-color: #00bcd4;
 }
