--- a/wwwroot/css/common.css
+++ b/wwwroot/css/common.css
@@ -143,6 +143,7 @@ img {
   overflow-y: auto;
   overflow-x: hidden;
   background: #222;
+  background: #263238;
   transition: all 0.5s ease;
 }
 
@@ -206,8 +207,9 @@ img {
 .sidebar-nav > li > a:hover,
 .sidebar-nav > li.active > a {
   text-decoration: none;
-  color: #fff;
-  background: #f8be12;
+  color: #1976d2f1;
+  /* background: #f8be12; */
+  background: #40555f;
 }
 .sidebar-nav > li > a i.fa {
   font-size: 24px;
@@ -537,7 +539,11 @@ img {
   margin-bottom: 6px;
 }
 .table-scroll.table-scroll-wrap th:last-child div p i {
-  color: #1976d2;
+  color: #0000ff;
+}
+
+.table-scroll.table-scroll-wrap th:last-child div p .redicon {
+  color: #df1212;
 }
 .table-search {
   display: flex;
@@ -929,10 +935,13 @@ nav.pagination-wrap {
 }
 .timeline .timeline-container .timeline-icon i {
   position: absolute;
-  left: 50%;
+  left: 57%;
   top: 50%;
   transform: translate(-50%, -50%);
+  font-size: large;
+  rotate: -12deg;
 }
+
 .timeline .timeline-container .timeline-icon img {
   width: 100%;
   height: 100%;
